<resources>
    <string name="app_name">YouTube</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="regist_click">Not registered yet? click here</string>
    <string name="password_restrictions">Password must be 8 characters long, and contain numbers, English letters, uppercase letters and symbols.</string>
    <string name="Verificationpassword">Password verification</string>
    <string name="sign_up">Sign Up</string>
    <string name="SignUp_click">Already registered? Click here</string>
    <string name="Nickname">Nickname</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>


    // alon
    <string name="youtube_logo">youTube</string>
    <string name="like_button_desc">like</string>
    <string name="share">share</string>
    <string name="post">post</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="search">search</string>
    <string name="sign_in">sign in</string>
    <string name="rewind">rewind</string>
    <string name="pause_play">pause/play</string>
    <string name="description">Description: </string>
    <string name="title">Title: </string>
    <string name="author">author: </string>
    <string name="likes">likes: </string>
    <string name="views">views: </string>
    <string name="forward">forward</string>
    <string name="fullscreen">fullscreen</string>
    <string name="title_video">Title video</string>
    <string name="description_video">Description video</string>
    <string name="add_video">Add Video</string>
    <string name="select_video">Select Video</string>
    <string name="cancel">Cancel</string>
    <string name="edit">edit</string>
    <string name="comment">Comment</string>
    <string name="delete">delete</string>
    <string name="more">more</string>
    <string name="collapse">collapse</string>
    <string name="lighting_mode">Change mode</string>
    <string name="upload_video">Upload video</string>
    <string name="login">Login</string>
    <string name="info">info</string>
    <string name="Help">Help</string>
    <string name="Setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="menu_icon">Menu</string>
    <string name="username_menu">Username</string>
    <string name="profile">prooooooooooooooo</string>
    <string name="check">check</string>
    <string name="BaseUrl">http://10.0.2.2:80/api/</string>
    <string name="welcome">Yo, yo, yo! Welcome to my crib on the web, where the beats are fresh and the vibes are always fly.</string>

</resources>